<resources>
    <string name="app_name">Mlearn</string>
    <string name="app_version">v.1.0.0</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_discussion_forum">Discussions</string>
    <string name="toolbar_feedback">Give a Feedback</string>
    <string name="toolbar_discussion">Discussion</string>
    <string name="toolbar_profile">Your <b>Profile</b></string>
    <string name="toolbar_my_course">Your <b>Course</b></string>
    <string name="toolbar_back">Back</string>
    <string name="toolbar_sign_out">Sign Out</string>
    <string name="dest_home_label">Home</string>
    <string name="dest_course_label">Course</string>
    <string name="dest_profile_label">Profile</string>
    <string name="ic_search_content_description">Search</string>
    <string name="search_bar_hint">Search</string>
    <string name="empty_home_course_text">No Course Yet</string>
    <string name="teacher_role">I am a teacher</string>
    <string name="confirm">Confirm</string>
    <string name="input_token_hint">Input your token</string>
    <string name="credentials">Credentials</string>
    <string name="wrong_credentials_message">Wrong teacher credentials. Please try again.</string>
    <string name="fail_to_authenticate_message">Failed to get your Google account. Please re-login your account.</string>
    <string name="teacher_need_credentials_message">Please input your credentials by clicking the I\'m a teacher button.</string>
    <string name="student_no_need_credentials_message">Student can\'t log in as a teacher. Please use another email to log in as teacher.</string>
    <string name="fail_to_sign_in_message">Failed to log in. Please try again.</string>
    <string name="account_deactivated_by_admin">Your account has been deactivated by admin. Please contact admin to activate back.</string>
    <string name="welcome_label">Welcome!</string>
    <string name="identity_label">Let\'s update your profile info</string>
    <string name="full_name_hint">Full Name</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="birth_date_picker_title_label">Choose Date</string>
    <string name="fail_to_update_profile">Failed to update your profile. Please try again.</string>
    <string name="skip_registration">Skip</string>
    <string name="no_search_image_content_description">Search Image</string>
    <string name="no_search_help_title">Start Searching for a Course</string>
    <string name="no_search_help_desc">Learning starts today. Search for a course you have been wanting to learn!</string>
    <string name="search_result_end_text">End of Search Results</string>
    <string name="no_search_result_text">No Result</string>
    <string name="ic_filter_content_description">Filter</string>
    <string name="filter_title_text">Filters</string>
    <string name="tags_title_text">Tags</string>
    <string name="edit_text">Edit</string>
    <string name="no_tag_selected_text">No Tag Selected</string>
    <string name="sort_title_text">Sort</string>
    <string name="a_z_ascending_sort_text">A-Z (ascending)</string>
    <string name="z_a_descending_sort_text">Z-A (descending)</string>
    <string name="newest_to_oldest_sort_text">Newest to oldest</string>
    <string name="oldest_to_newest_sort_text">Oldest to newest</string>
    <string name="reset_filter_text">Reset to default</string>
    <string name="apply_filter_text">Apply filters</string>
    <string name="type_tag_title_text">Type</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_selection_text">Save Selection</string>
    <string name="junior_one_text">Junior - 1</string>
    <string name="junior_two_text">Junior - 2</string>
    <string name="junior_three_text">Junior - 3</string>
    <string name="senior_one_text">Senior - 1</string>
    <string name="senior_two_text">Senior - 2</string>
    <string name="senior_three_text">Senior - 3</string>
    <string name="physics_text">Physics</string>
    <string name="biology_text">Biology</string>
    <string name="chemistry_text">Chemistry</string>
    <string name="math_text">Math</string>
    <string name="save_text">Save</string>
    <string name="level_tag_title_text">Level</string>
    <string name="no_filter_result_found_text">No Filter Result Found</string>
    <string name="searched_desc_text">Search result for \"%s\"</string>
    <string name="submit_answer_text">Submit Answer</string>
    <string name="show_explanation_text">Show Explanation</string>
    <string name="hide_explanation_text">Hide Explanation</string>
    <string name="explanation_text">Explanation</string>
    <string name="correct_answer_text">Correct Answer!</string>
    <string name="correct_answer_image_content_description">Correct Answer Image</string>
    <string name="wrong_answer_image_content_description">Wrong Answer Image</string>
    <string name="wrong_answer_text">Wrong Answer</string>
    <string name="next_chapter_text">Next Chapter</string>
    <string name="assignment_result_text">%1$d/%2$d</string>
    <string name="retry_practice_text">Retry Practice</string>
    <string name="passing_grade_desc_text">Get %d to proceed to the next chapter</string>
    <string name="finish_course_text">Finish Course</string>
    <string name="your_score_text">Your Score</string>
    <string name="practice_fragment_toolbar_text">Practice</string>
    <string name="quiz_fragment_toolbar_text">Quiz</string>
    <string name="quiz_result_fragment_toolbar_text">Quiz Result</string>
    <string name="practice_result_fragment_toolbar_text">Practice Result</string>
    <string name="question_text">Question %d</string>
    <string name="discussion_label">Discussion</string>
    <string name="create_new_discussion">Create New Discussion</string>
    <string name="title">Title</string>
    <string name="questions">Questions</string>
    <string name="create_discussion">Create Discussion</string>
    <string name="reply_to_the_discussion">Reply to the Discussion</string>
    <string name="reply">Reply</string>
    <string name="reply_count_state">0</string>
    <string name="no_replies_text">No answers</string>
    <string name="no_discussion_image_content_description">Discussion Empty Image</string>
    <string name="no_discussion_help_title">No Discussion Found.</string>
    <string name="no_discussion_help_desc">All discussions related to this chapter will appear here.</string>
    <string name="give_a_feedback">Give a feedback</string>
    <string name="log_out">Log out</string>
    <string name="category">Category</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="your_feedback_hint">Your feedback here…</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string-array name="feedback_category">
        <item>Material</item>
        <item>Exercise</item>
        <item>Discussion</item>
        <item>3D view</item>
        <item>Other</item>
    </string-array>
    <string name="success_update_profile_message">Profile successfully updated!</string>
    <string name="bio_hint">Bio</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="email_address_hint">Email Address</string>
    <string name="close_action">CLOSE</string>
    <string name="about_tab">About</string>
    <string name="feedback_tab">Feedback</string>
    <string name="email_label">Email</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="birth_date_label">Birth Date</string>
    <string name="submitted_label">Submitted</string>
    <string name="date_submitted_label">Date Submitted</string>
    <string name="feedback_type_label">Feedback Type</string>
    <string name="description_label">Description</string>
    <string name="edit_label">Edit</string>
    <string name="toolbar_edit_profile">Edit Profile</string>
    <string name="course_label">Course</string>
    <string name="finished_label">Finished</string>
    <string name="feedback_sent_message">Feedback sent!</string>
    <string name="feedback_not_sent_message">Failed to send your feedback. Please try again.</string>
    <string name="course_created_label">Course Created</string>
    <string name="course_published_label">Course Published</string>
    <plurals name="profile_course_label">
        <item quantity="one">Course</item>
        <item quantity="other">Courses</item>
    </plurals>
    <plurals name="profile_course_created_label">
        <item quantity="one">Course Created</item>
        <item quantity="other">Courses Created</item>
    </plurals>
    <plurals name="profile_course_published_label">
        <item quantity="one">Course Published</item>
        <item quantity="other">Courses Published</item>
    </plurals>
    <string name="enrollment">Enrollment</string>
    <string name="enrollment_key_hint">Enrollment Key</string>
    <string name="enroll">Enroll</string>
    <string name="enrolled_label">enrolled</string>
    <string name="continue_studying">Continue</string>
    <string name="content">Content</string>
    <string name="about_this_course"><b>About</b> This Course</string>
    <string name="recommended_before_you_start"><b>Recommended</b> Before You Start</string>
    <string name="related_to_this_course"><b>Related</b> to This Course</string>
    <string name="about_this_course_creator"><b>About This</b> Course\'s Creator</string>
    <string name="tags">Tags</string>
    <string name="lesson_label">LESSON</string>
    <string name="practice_label">PRACTICE</string>
    <string name="quiz_label">QUIZ</string>
    <string name="created_by">Created by %s</string>
    <string name="no_recommended_course_label">No recommended course, yet.</string>
    <string name="no_related_courses_label">No related courses, yet.</string>
    <string name="completed_progress">Completed</string>
    <string name="not_completed_progress">Not completed</string>
    <string name="last_updated_label">last updated</string>
    <string name="view_student_result_label">View Student Result</string>
    <string name="three_d_back_information">Tap empty area to show back button</string>
    <string name="back_button_label">BACK</string>
    <string name="course_ongoing_tab">Ongoing</string>
    <string name="course_finished_tab">Finished</string>
    <string name="no_data_label">No Data</string>
    <string name="content_navigation_title">Contents</string>
    <string name="see_discussion">See Discussion (%s)</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <plurals name="creator_course_count">
        <item quantity="one">%d course created</item>
        <item quantity="other">%d courses created</item>
    </plurals>
    <string name="submit_result_text">Submit Result</string>
    <string name="confirmation_dialog_show_result_title">Show your results?</string>
    <string name="confirmation_dialog_show_result_message">Some questions are still not answered. Are you sure you want to submit?</string>
    <string name="dialog_no_text">No</string>
    <string name="dialog_yes_text">Yes</string>
    <string name="success_add_forum_message">Forum added.</string>
    <string name="success_add_reply_message">Reply added to the discussion.</string>
    <string name="mark_as_answer_discussion">Mark as Answer</string>
    <string name="notification_label">Notification</string>
    <string name="general_notification_channel_name">General</string>
    <string name="general_notification_channel_id">General</string>
    <string name="no_notification_text">No Notification Yet</string>
    <string name="student_data_search_hint">Search by emails</string>
    <string name="name_text">Name</string>
    <string name="progress_text">Progress</string>
    <string name="score_text">Score</string>
    <string name="student_progress_text_template">%1s \/%2s</string>
    <string name="no_student_data_text">No Student Data Yet</string>
</resources>