<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_16"
    android:orientation="vertical"
    tools:context=".ui.feedback.FeedbackFragment">

    <TextView
        android:id="@+id/text_view_feedback_category_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="?attr/colorOnSurface" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_feedback_category"
        style="@style/Widget.TA.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:hintEnabled="false">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_feedback_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_feedback_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/your_feedback"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/edit_text_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="top|start"
        android:hint="@string/your_feedback_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="@integer/max_content_line_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:enabled="false"
        android:text="@string/submit_feedback" />
</LinearLayout>