<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16">

    <TextView
        android:id="@+id/text_view_create_discussion_title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:text="@string/create_new_discussion"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_discussion_title"
        style="@style/Widget.TA.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_create_discussion_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_discussion_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_discussion_question"
        style="@style/Widget.TA.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:hint="@string/questions"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_cunter_length_4000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_discussion_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_discussion_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="@integer/max_content_line_3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_submit_discussion_forum"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:enabled="false"
        android:text="@string/create_discussion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_discussion_question" />

</androidx.constraintlayout.widget.ConstraintLayout>