<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.view.user.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_view_give_a_feedback"
        style="@style/Widget.TA.TextView.Icon.Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/give_a_feedback"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorOnSurface"
        app:drawableStartCompat="@drawable/ic_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/text_view_log_out"
        style="@style/Widget.TA.TextView.Icon.Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorOnSurface"
        app:drawableStartCompat="@drawable/ic_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_give_a_feedback"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/text_view_app_version"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingPrefix" />

</androidx.constraintlayout.widget.ConstraintLayout>